--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "main": "src/index.js",
   "author": "kanitsharma",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "scripts": {
+    "start": "rollup --watch --config --configDebug",
+    "build": "rollup --config --configDebug"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "rollup": "^1.10.0",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-run": "^1.1.0"
   }
 }
