Added terser for minification

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-run": "^1.1.0"
+    "rollup-plugin-run": "^1.1.0",
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
